--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,12 @@
   --foreground: #171717;
 }
 
+@theme inline {
+  --color-Andreas: var(--color-green-400);
+  --color-foreground: var(--foreground);
+  --font-sans: var(--font-geist-sans);
+  --font-mono: var(--font-geist-mono);
+}
 /* @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
