--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,25 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+h1 {
+  /* font-size: var(--text-HeaderSizeBig); */
+  font-family: var(--font-headers);
+  font-weight: 700;
+}
+h2 {
+  font-size: var(--text-HeaderSizeSmall);
+  font-family: var(--font-headers);
+}
+p,
+a {
+  font-size: var(--text-ParagraphSize);
+  font-family: var(--font-paragraph);
+}
 
 @theme inline {
   /* This white is mainly used to background colors, and for some text colors(headers), where the background and white */
