--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,6 +28,17 @@ button {
   cursor: pointer;
 }
 
+::-webkit-scrollbar {
+  height: 10px;
+  width: auto;
+
+  background-color: var(--color-neutral_white);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-main_black);
+}
+
 @theme inline {
   /* This white is mainly used to background colors, and for some text colors(headers), where the background and white */
   --color-main_white: #ffffff;
